chore(handler): add docs to signIn and signUp handlers
